@@ -1,23 +1,18 @@
 language: python
 python:
-  - 2.7
-  - 3.5
-  - 3.6
-matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
+- 3.6
+- 3.7
+- 3.8
 sudo: false
 install:
-  - pip install -U pip
-  - pip install .
+- pip install -U pip nose
+- pip install .
 script:
-  - nosetests --stop --verbose tests
+- nosetests --stop --verbose tests
 deploy:
   provider: pypi
   user: dopstar
   password:
-    secure: UeBh7chwub2qlaCpG4C3/BShOZJfcz1LoTQk2KR6JLX6mVJgrNdPphnHMl1tQqWytNg1qtnkdvSgwqvxnx63z2UviuZlzPum6/KDTaoCfjfeAS3mVtnPRx6Di1LieVvpEeY+oLeheJdd8lXlS/GxRdGtxzgoc87fYpFFPXCx/HbL5GCXgXUMJ0tMdjcS2XrtX87iAmk7gYzPq5ovPvqTDdjLHwAKe7mfQUq61/osb9D3TeeVhXtOvLnfPIW6JylPVusgnUEXw2EpYJfZzKUITmIO5+STeRzhI9mlSa5bepUrs9wrcv4aMdXanC3MLlWfdTcafb2jr161OstXaVBhSxrw9UiSHolWE+ZOXIUVyd5l17AazZ0VckViWPMkj631gPhPLiOozq8rTNflYcuK/RZK7UM1a5rLiL78UOzyvmiKxS0YL7ATW/wC3BCN+QNqV4HMqSMqLdRcSJhAPnuWLRw9hHESlFBBHc4lq9InZP3GMddOed0nuYUDY207T87gclIhsBqFjj6Dxb9AED5gDt2m1KmX/hRQKGx9UUcqOhUeUOY/MjlvRIH+ReM14XXLMTriYX/hGwZIcOTnxSZ9bb7lWl95iflMC+5rLaV1/VCIhxhCazgKXwnTuicsSugCkFnwEqPhEPh2ZmKhLYI/LDjrJpZfC/zTVeKQkybIbyE=
+    secure: J4ZotGNxPfZ5rcygHB4iO9BXWhGbmtxsDNzMab0kIivsN72ely9i1LBZpGcEIkZvRiKHLMHzPTCQHRHEabSQNqV+dZswjWKniEosk+OnXCZQHpi2urJAZLC+6qTRn9XfgB4tB+vQoie4McB+nJGhGOikJ7xnAuYWp+KLXC9Qjuk7X8bJlY8Wch5CD6zDt4cOpf7P7yrVEN9Q8amlL6B0UdXFB9GBR3CxDzyv69ok7EYRS43xnwDXYNbCOYDS0ufyoDhSiw4YRgwE9wHNGmQPnwIySPHXEAwzesZyeVoi3yINwmDw64AaIpi+Fy/TJea/e0ZvPuLunD/MelryqNeQKDbq5ahPXaWCzUmS+q2DbSw7IzRJOGPgNodBwdees4PD+H8/LWrAvEPEASyeGegXqnuy85ARekr1MO5lyOEwoO5peSPD2gupbumk+Qcyu9yqvbHJLy3tApD7hwYehSicQhrX3y+WbHeQrZRzcfeMWmz9HrzPUTN5f5qmstpcD8++66zlfn5Q31sB8/QjMGeJdsyjvaFmMe+Ho+YhsI4LDwTwutLrFlWtoun3Sa//tVHpbMQFxjt0MsBxQSE4USrsXVnDEa7jYXr3DEiBeYoaQxNoYZNKIO3xbF7et+Ggj9dk9rMzer/htmbBCWsRkIQXmbCV1dbOf0QWmV+jJDaM0dA=
   on:
     tags: true
